feat: Add UI for AI reasoning display and refine agentic saga tool call tracking and metadata handling.

--- a/ui/index.html
+++ b/ui/index.html
@@ -245,6 +245,7 @@
                         </svg>
                         <h3>Answer</h3>
                     </div>
+                    <div id="sagaReasoning" class="reasoning-summary-container" style="display: none;"></div>
                     <div id="formattedResponse" class="response-content"></div>
                 </div>
 
